--- a/css/_header.scss
+++ b/css/_header.scss
@@ -159,9 +159,8 @@ header {
                 margin-top: 90px;
                 // padding: 80px 0;
                 list-style: none;
-                background: linear-gradient(26deg, #dcba9d, transparent);
-
-                // background:linear-gradient(45deg, #000000 61%, rgba(0, 0, 0, 0) 115.06%);
+                
+                background: #fff;
                 @include for-tablet-portrait {
                     
                 }
