--- a/css/_entry.scss
+++ b/css/_entry.scss
@@ -53,29 +53,41 @@ $color_text: #4b4a4a;
             line-height: 29px;
         }
     }
-    .appartment__link {
-        .appartment__item {
-            margin-bottom: 16px;
+    // .appartment__link {
+    //     .appartment__item {
+    //         margin-bottom: 16px;
             
-            .link {
-                @extend %BodyM;
-                i {
-                    font-size: 24px;
-                    margin-right: 8px;
-                }
-            }
-        }
-    }
+    //         .link {
+    //             @extend %BodyM;
+    //             i {
+    //                 font-size: 24px;
+    //                 margin-right: 8px;
+    //             }
+    //         }
+    //     }
+    // }
     h3 {
         @extend %h4;
         margin-top: 16px;
         margin-bottom: 16px;
     }
-    .entry__link {
-        text-decoration: none;
-        @extend %Text;
-        margin-bottom: 16px;
+    .links {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        .entry__link {
+            color: $color_text;
+            text-decoration: none;
+            @extend %Text;
+            margin-bottom: 16px;
+            i {
+                margin-right: 8px;
+                font-size: 18px;
+                color: rgb(94, 164, 221);
+            }
+        }
     }
+    
     h4 {
         @extend %h4;
         margin-top: 24px;
