--- a/css/_header.scss
+++ b/css/_header.scss
@@ -157,15 +157,15 @@ header {
                 // width: 240px;
                 height: 100%;
                 margin-top: 90px;
-                // padding: 80px 0;
+                padding: 24px 0;
                 list-style: none;
-                
-                background: #fff;
+                background: rgb(195,34,34);
+background: linear-gradient(21deg, rgba(195,34,34,1) 0%, rgba(255,255,255,1) 91%);
                 @include for-tablet-portrait {
                     
                 }
 
-                box-shadow: 1px 5px 6px rgba(0, 0, 0, .2);
+                box-shadow: 1px 8px 8px rgb(0 0 0 / 20%);
                 transition-duration: .25s;
 
                 .navigation-mobile__item {
