--- a/css/_appartment.scss
+++ b/css/_appartment.scss
@@ -21,9 +21,10 @@ $color_text: #4b4a4a;
     line-height: 19px;
     color: $color_text;
 }
-.appartment__section {
+.rent__section {
     padding: 16px;
     h2 {
+        margin-top: 100px;
         @extend %h2;
         margin-bottom: 24px;
         @include for-phone-only {
@@ -31,23 +32,54 @@ $color_text: #4b4a4a;
             line-height: 29px;
         }
     }
-    .appartment__link {
-        .appartment__item {
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-start;
-            align-items: center;
-            margin-bottom: 16px;
+    .rent__box {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-wrap: wrap;
+
+        .rent__item {
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            transition: 0.3s;
+            border-radius: 5px;
+            width: 15%;
+            height: 100px;
+            margin: 16px;
+            padding: 8px;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+            transition: 0.3s;
+            border-radius: 5px;
+            &:hover {
+                box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+            }
+            @include for-phone-only {
+                width: 36%;
+                height: 120px;
+            }
+            // @include for-tablet-portrait {
+            //     width: 27%;
+            //     height: 120px;
+            // }
+            .rent__link {
+                text-decoration: none;
                 i {
                     font-weight: bold;
                     font-size: 24px;
-                    color: $color_text;
-                    margin-right: 16px;
-                    margin-bottom: 8px;
+                    color:lightskyblue;
+                    margin: 0 16px 8px 0;
                 }
-        }
-        .appartment__name {
-            @extend %BodyM;
+                .rent__name {
+                    font-family: Golos;
+                    font-size: 12px;
+                    font-weight: 400;
+                    line-height: 14px;
+                    color: #4b4a4a;
+                }
+            }
+            .card:hover {
+                box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+            }
         }
     }
 
