--- a/css/_header.scss
+++ b/css/_header.scss
@@ -13,11 +13,15 @@
 header {
 
     .nav__container {
+        position: fixed;
+        top: 0;
+        background-color: white;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
         padding: 16px 16px;
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 
         // @include for-tablet-portrait {
         //     padding: 30px;
@@ -41,7 +45,7 @@ header {
             }
 
             @include for-phone-only {
-                width: 20%;
+                width: 40%;
             }
         }
 
@@ -111,7 +115,6 @@ header {
 
             .navigation-mobile__btn {
                 display: flex;
-                align-items: center;
                 position: fixed;
                 top: 50px;
                 left: 16px;
@@ -156,14 +159,11 @@ header {
                 left: -100%;
                 // width: 240px;
                 height: 100%;
-                margin-top: 90px;
+                margin-top: 86px;
                 padding: 24px 0;
                 list-style: none;
                 background: rgb(195,34,34);
-background: linear-gradient(21deg, rgba(195,34,34,1) 0%, rgba(255,255,255,1) 91%);
-                @include for-tablet-portrait {
-                    
-                }
+                background: linear-gradient(22deg, #c32222 40%, white 91%);
 
                 box-shadow: 1px 8px 8px rgb(0 0 0 / 20%);
                 transition-duration: .25s;
