--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,9 @@ textarea {
 }
 
 header .nav__container {
+  position: fixed;
+  top: 0;
+  background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -456,6 +459,8 @@ header .nav__container {
       -ms-flex-align: center;
           align-items: center;
   padding: 16px 16px;
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 header .nav__container .navigation__home {
   width: 10%;
@@ -474,7 +479,7 @@ header .nav__container .navigation__home .navigation__img {
 }
 @media (max-width: 599px) {
   header .nav__container .navigation__home {
-    width: 20%;
+    width: 40%;
   }
 }
 header .nav__container .navigation__menu {
@@ -553,9 +558,6 @@ header .nav__container .navigation__mobile .navigation-mobile__btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   position: fixed;
   top: 50px;
   left: 16px;
@@ -597,11 +599,11 @@ header .nav__container .navigation__mobile .navigation-mobile__box {
   top: 0;
   left: -100%;
   height: 100%;
-  margin-top: 90px;
+  margin-top: 86px;
   padding: 24px 0;
   list-style: none;
   background: #c32222;
-  background: linear-gradient(21deg, #c32222 0%, white 91%);
+  background: linear-gradient(22deg, #c32222 40%, white 91%);
   -webkit-box-shadow: 1px 8px 8px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 8px 8px rgba(0, 0, 0, 0.2);
   -webkit-transition-duration: 0.25s;
@@ -646,7 +648,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .appartment__section h2, .title__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .rent__section h2, .title__section h2 {
   font-family: Golos;
   font-size: 27px;
   font-weight: 700;
@@ -701,7 +703,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .appartment__section h2, .title__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .rent__section h2, .title__section h2 {
   font-family: Golos;
   font-size: 27px;
   font-weight: 700;
@@ -709,7 +711,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.money__section ul li, .legalisation__section .demo .legalisation__text, .legalisation__section .demo ol, .entry__section h5, .appartment__section .appartment__link .appartment__name {
+.money__section ul li, .legalisation__section .demo .legalisation__text, .legalisation__section .demo ol, .entry__section h5 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -717,19 +719,20 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.appartment__section {
+.rent__section {
   padding: 16px;
 }
-.appartment__section h2 {
+.rent__section h2 {
+  margin-top: 100px;
   margin-bottom: 24px;
 }
 @media (max-width: 599px) {
-  .appartment__section h2 {
+  .rent__section h2 {
     font-size: 24px;
     line-height: 29px;
   }
 }
-.appartment__section .appartment__link .appartment__item {
+.rent__section .rent__box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -740,18 +743,57 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 16px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
-.appartment__section .appartment__link .appartment__item i {
+.rent__section .rent__box .rent__item {
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 5px;
+  width: 15%;
+  height: 100px;
+  margin: 16px;
+  padding: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+.rent__section .rent__box .rent__item:hover {
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+@media (max-width: 599px) {
+  .rent__section .rent__box .rent__item {
+    width: 36%;
+    height: 120px;
+  }
+}
+.rent__section .rent__box .rent__item .rent__link {
+  text-decoration: none;
+}
+.rent__section .rent__box .rent__item .rent__link i {
   font-weight: bold;
   font-size: 24px;
-  color: #4b4a4a;
-  margin-right: 16px;
-  margin-bottom: 8px;
+  color: lightskyblue;
+  margin: 0 16px 8px 0;
 }
+.rent__section .rent__box .rent__item .rent__link .rent__name {
+  font-family: Golos;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+  color: #4b4a4a;
+}
+.rent__section .rent__box .rent__item .card:hover {
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
 .legalisation__section h1, .title__section h1 {
   font-family: Golos;
   font-size: 36px;
@@ -760,7 +802,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .title__section h2, .appartment__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .title__section h2, .rent__section h2 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -784,7 +826,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.money__section ul li, .legalisation__section .demo .legalisation__text, .legalisation__section .demo ol, .entry__section h5, .appartment__section .appartment__link .appartment__name {
+.money__section ul li, .legalisation__section .demo .legalisation__text, .legalisation__section .demo ol, .entry__section h5 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -865,7 +907,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .title__section h2, .appartment__section h2, .entry__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .title__section h2, .rent__section h2, .entry__section h2 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -889,7 +931,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.money__section ul li, .legalisation__section .demo .legalisation__text, .legalisation__section .demo ol, .appartment__section .appartment__link .appartment__name, .entry__section h5 {
+.money__section ul li, .legalisation__section .demo .legalisation__text, .legalisation__section .demo ol, .entry__section h5 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -972,7 +1014,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .title__section h2, .appartment__section h2, .entry__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .title__section h2, .rent__section h2, .entry__section h2 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -996,7 +1038,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.money__section ul li, .appartment__section .appartment__link .appartment__name, .entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text {
+.money__section ul li, .entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -1053,7 +1095,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .title__section h2, .appartment__section h2, .entry__section h2, .money__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .title__section h2, .rent__section h2, .entry__section h2, .money__section h2 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -1077,7 +1119,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.appartment__section .appartment__link .appartment__name, .entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text, .money__section ul li {
+.entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text, .money__section ul li {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -1129,7 +1171,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .title__section h2, .appartment__section h2, .entry__section h2, .money__section h2, .fop__section h2 {
+.about__section h1, .about__section h2, .title__section h2, .rent__section h2, .entry__section h2, .money__section h2, .fop__section h2 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -1153,7 +1195,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.appartment__section .appartment__link .appartment__name, .entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text, .money__section ul li {
+.entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text, .money__section ul li {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -1248,7 +1290,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.title__section h2, .appartment__section h2, .entry__section h2, .money__section h2, .fop__section h2, .about__section h2, .about__section h1 {
+.title__section h2, .rent__section h2, .entry__section h2, .money__section h2, .fop__section h2, .about__section h2, .about__section h1 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -1272,7 +1314,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.appartment__section .appartment__link .appartment__name, .entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text, .money__section ul li {
+.entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text, .money__section ul li {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
