--- a/css/_header.scss
+++ b/css/_header.scss
@@ -14,6 +14,8 @@ header {
 
     .nav__container {
         position: fixed;
+        left: 0;
+        right: 0;
         top: 0;
         background-color: white;
         display: flex;
@@ -22,6 +24,7 @@ header {
         align-items: center;
         padding: 16px 16px;
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+
 
         // @include for-tablet-portrait {
         //     padding: 30px;
@@ -71,7 +74,7 @@ header {
                     padding: 5px 25px;
 
                     &:hover {
-                        border: 1px solid red;
+                        color:#000;
                     }
                 }
             }
@@ -162,8 +165,9 @@ header {
                 margin-top: 86px;
                 padding: 24px 0;
                 list-style: none;
-                background: rgb(195,34,34);
-                background: linear-gradient(22deg, #c32222 40%, white 91%);
+                backdrop-filter: blur(4px);
+                background: rgb(255,255,255);
+background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(230,16,16,0.7039858179599965) 67%, rgba(255,255,255,1) 100%);
 
                 box-shadow: 1px 8px 8px rgb(0 0 0 / 20%);
                 transition-duration: .25s;
