--- a/css/_legalisation.scss
+++ b/css/_legalisation.scss
@@ -41,7 +41,7 @@ $color_text: #4b4a4a;
     line-height: 19px;
 }
 .legalisation__section {
-    padding: 16px;
+    padding: 116px 16px 16px;
     h1 {
         @extend %h1;
         margin-bottom: 24px;
