--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,7 @@
 // @import "_navigation.scss";
 @import "_header.scss";
 @import "_index.scss";
-@import "_appartment.scss";
+@import "_rent.scss";
 @import "_entry.scss";
 @import "_legalisation.scss";
 @import "money.scss";
