--- a/css/_fop.scss
+++ b/css/_fop.scss
@@ -42,7 +42,7 @@ $color_text: #4b4a4a;
 }
 
 .fop__section {
-    padding: 16px;
+    padding: 116px 16px 16px;
     h2 {
         @extend %h2;
         margin-bottom: 16px;
