--- a/css/_lviv.scss
+++ b/css/_lviv.scss
@@ -42,16 +42,16 @@ $color_text: #4b4a4a;
 }
 
 .about__section {
-    padding: 16px;
+    padding: 116px 16px 16px;
     h2 {
         @extend %h2;
         margin-bottom: 16px;
-        text-align: right;
+        text-align: left;
     }
     h1 {
         @extend %h2;
-        margin-bottom: 16px;
-        text-align: right;
+        margin-bottom: 48px;
+        text-align: left;
     }
     .item {
         margin-bottom: 16px;
