--- a/css/_rent.scss
+++ b/css/_rent.scss
@@ -22,9 +22,8 @@ $color_text: #4b4a4a;
     color: $color_text;
 }
 .rent__section {
-    padding: 16px;
+    padding: 116px 16px 16px;
     h2 {
-        margin-top: 100px;
         @extend %h2;
         margin-bottom: 24px;
         @include for-phone-only {
