--- a/css/style.css
+++ b/css/style.css
@@ -662,7 +662,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 
 .title__section {
-  padding: 140px 16px;
+  padding: 156px 16px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -725,10 +725,9 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 
 .rent__section {
-  padding: 16px;
+  padding: 116px 16px 16px;
 }
 .rent__section h2 {
-  margin-top: 100px;
   margin-bottom: 24px;
 }
 @media (max-width: 599px) {
@@ -847,7 +846,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 
 .entry__section {
-  padding: 16px;
+  padding: 116px 16px 16px;
 }
 .entry__section h2 {
   margin-bottom: 16px;
@@ -952,7 +951,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 
 .legalisation__section {
-  padding: 16px;
+  padding: 116px 16px 16px;
 }
 .legalisation__section h1 {
   margin-bottom: 24px;
@@ -1059,7 +1058,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 
 .money__section {
-  padding: 16px;
+  padding: 116px 16px 16px;
 }
 .money__section h2 {
   margin-bottom: 16px;
@@ -1140,7 +1139,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 
 .fop__section {
-  padding: 16px;
+  padding: 116px 16px 16px;
 }
 .fop__section h2 {
   margin-bottom: 16px;
@@ -1216,15 +1215,15 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 
 .about__section {
-  padding: 16px;
+  padding: 116px 16px 16px;
 }
 .about__section h2 {
   margin-bottom: 16px;
-  text-align: right;
+  text-align: left;
 }
 .about__section h1 {
-  margin-bottom: 16px;
-  text-align: right;
+  margin-bottom: 48px;
+  text-align: left;
 }
 .about__section .item {
   margin-bottom: 16px;
